[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -12,11 +12,14 @@
 
 * Inbox
 * Next Action
-** TODO [#A] 大壮名城G1-1018租房月志                                :event:
-DEADLINE: <2021-10-12 周二 23:00 +1m> SCHEDULED: <2021-10-12 周二 09:00 +1m>
+** TODO [#A] 大壮名城G1-1018租房月志                                 :event:
+DEADLINE: <2021-11-12 周五 23:00 +1m> SCHEDULED: <2021-11-12 周五 09:00 +1m>
 :PROPERTIES:
 :LOGGING: DONE(@)
 :END:
+- State "DONE"       from "TODO"       [2021-10-12 周二 09:44] \\
+  1. 房租2000, 电费200(空调+电脑), 物业+水117, 网费100
+  2. 额外疏通水池下水管道50
 - State "DONE"       from "TODO"       [2021-09-12 周日 09:06] \\
   1. 房租2000, 电费200(空调+电脑), 物业+水117, 网费100
 - State "DONE"       from "TODO"       [2021-08-12 周四 16:02] \\
@@ -32,13 +35,40 @@ DEADLINE: <2021-10-12 周二 23:00 +1m> SCHEDULED: <2021-10-12 周二 09:00 +1m>
   2. 房间里的马桶坏了, 电磁炉可能坏了, 阳台灯坏了
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
-** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2021-10-10 周日 23:00 ++1w> SCHEDULED: <2021-10-09 周六 18:00 ++1w>
+** TODO [#A] 归档并回顾一周的计划                                    :event:
+DEADLINE: <2021-10-24 周日 23:00 ++1w> SCHEDULED: <2021-10-23 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-09-30 周四 18:05]
+:LAST_REPEAT: [2021-10-16 周六 15:15]
 :END:
+- State "DONE"       from "TODO"       [2021-10-16 周六 15:15] \\
+  1. 完成了战斗优化:
+     * 拆分prewar和atwar
+     * 实现一套默认的client, 并优化其他战斗的代码
+  2. 完成了战斗指令优化:
+     * 将多个packer改为单个packer
+     * 新增group接口实现之前多packer的功能
+  3. 调整英雄模型比例:
+     * 新增waruidata读取战斗相关的ui数据, 挂在client下
+     * prewar和atwar分别实现CWarriorBody从而实现采用不同模型
+     * debug_war目前虽然使用prewar的模型, 但是还要播放atwar的特效, 以后可能会有问题
+  4. 实现战斗胜利动画播放:
+     * 新增IDelay实现延时
+     * 调用spine动画的'Cheer'实现庆祝动画
+  ------------------------------------------------
+  1. 部门聚餐(第三次西域胡杨)
+  2. 领取社保卡
+  ------------------------------------------------
+  1. 车胎彻底寄了, 补胎时车上的钉子还给大拇哥扎了个孔, 哭哭了. 换胎!!
+- State "DONE"       from "TODO"       [2021-10-09 周六 16:15] \\
+  1. 完成了深入理解cocos2dx的阅读计划
+  2. 整合了各个战斗的英雄选择框, 并使用pubtask优化其加载性能
+  3. 删除了不再使用的战斗代码和模型层的战斗模型, 并将引用它的相关代码进行了重构和修改
+  ------------------------------------------------
+  1. 老妈走了, 感觉空荡荡的, 需要缓缓
+  ------------------------------------------------
+  1. 感觉有点无聊, 原神
 - State "DONE"       from "TODO"       [2021-09-30 周四 18:04] \\
   1. 迁移多队战斗代码
      - [X] 模型层迁移优化
@@ -422,6 +452,7 @@ DEADLINE: <2021-10-30 周六 23:00 ++1m> SCHEDULED: <2021-10-30 周六 09:00 ++1
   生活上:
   1. 理发
   2. 老妈来这里过国庆了
+  3. 9.28半斤请客聚餐, 泪目
 - State "DONE"       from "TODO"       [2021-08-30 周一 20:50] \\
   第五个月, 工作上:
   1. 完成了基础商店功能的制作
@@ -472,6 +503,8 @@ DEADLINE: <2021-10-30 周六 23:00 ++1m> SCHEDULED: <2021-10-30 周六 09:00 ++1
   2. 完成了多益的入职培训
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
+** DONE [#A] 补胎                                                    :event:
+CLOSED: [2021-10-18 周一 09:04] SCHEDULED: <2021-10-14 周四 09:32>
 * Appointment
 ** TODO 购买xbox精英二代手柄                                     :shopping:
 <2021-11-01 周一 09:00>
@@ -495,5 +528,21 @@ SCHEDULED: <2021-06-12 周六 09:00>
 ** WAIT 爬火炉山                                                     :event:
 - State "WAIT"       from "TODO"       [2021-04-11 周日 16:29] \\
   和同事商量一下一起去, 先不急.
+** Archive                                                         :ARCHIVE:
+*** DONE 西域胡杨部门聚餐                                            :date:
+CLOSED: [2021-10-16 周六 10:32]
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-10-16 周六 17:18
+:END:
+<2021-10-14 周四 17:00>
+*** DONE 领取社保卡                                                 :event:
+CLOSED: [2021-10-16 周六 10:33]
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-10-16 周六 17:18
+:END:
+<2021-10-16 周六 10:33>
+** DONE 枪火激活码两个                                              :event:
+CLOSED: [2021-10-23 周六 14:48]
+6HBCSW3NKCQEESM5, 感恩戴德一天
 * Project
 * Someday
