[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -35,13 +35,26 @@ DEADLINE: <2021-11-12 周五 23:00 +1m> SCHEDULED: <2021-11-12 周五 09:00 +1m>
   2. 房间里的马桶坏了, 电磁炉可能坏了, 阳台灯坏了
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
-** TODO [#A] 归档并回顾一周的计划                                    :event:
-DEADLINE: <2021-10-24 周日 23:00 ++1w> SCHEDULED: <2021-10-23 周六 18:00 ++1w>
+** TODO [#A] 归档并回顾一周的计划                                   :event:
+DEADLINE: <2021-10-31 周日 23:00 ++1w> SCHEDULED: <2021-10-30 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-10-16 周六 15:15]
+:LAST_REPEAT: [2021-10-25 周一 09:11]
 :END:
+- State "DONE"       from "TODO"       [2021-10-25 周一 09:11] \\
+  1. 实现了一个新的战斗进度组件用来控制战斗命令的执行进度, 不过由于尚未支持从开始到
+     拖动位置的快速执行功能, 导致如果战斗中存在战斗状态的添加和删除, 拖动会导致异常
+  2. 实现了一个新的布局组件用来支持战斗阵容的导入和导出. 目前仅对测试战斗做了适配,
+     使测试战斗可以导出阵容信息供他人复现阵容
+  3. 将服务端发送的网络协议以可读的形式输出至文件, 供开发和测试分析既能表现
+  4. 编写了部分年度总结的内容
+  ------------------------------------------------
+  1. 到车店换胎, 顺便把碟刹片和外胎全换了, 车店老板提醒我一定要把胎的气压加到60以
+     上, 之前的胎压太低了
+  2. 房东提醒我把车放到楼下, 不要影响消防通道, 有没有折中的解决办法呢?
+  ------------------------------------------------
+  1. 突然发现公司的枪火重生可以领两个激活码, 我直接感恩戴德
 - State "DONE"       from "TODO"       [2021-10-16 周六 15:15] \\
   1. 完成了战斗优化:
      * 拆分prewar和atwar
@@ -503,8 +516,12 @@ DEADLINE: <2021-10-30 周六 23:00 ++1m> SCHEDULED: <2021-10-30 周六 09:00 ++1
   2. 完成了多益的入职培训
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
-** DONE [#A] 补胎                                                    :event:
+** Archive                                                         :ARCHIVE:
+*** DONE [#A] 补胎                                                  :event:
 CLOSED: [2021-10-18 周一 09:04] SCHEDULED: <2021-10-14 周四 09:32>
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-10-25 周一 09:26
+:END:
 * Appointment
 ** TODO 购买xbox精英二代手柄                                     :shopping:
 <2021-11-01 周一 09:00>
@@ -541,8 +558,11 @@ CLOSED: [2021-10-16 周六 10:33]
 :ARCHIVE_TIME: 2021-10-16 周六 17:18
 :END:
 <2021-10-16 周六 10:33>
-** DONE 枪火激活码两个                                              :event:
+*** DONE 枪火激活码两个                                             :event:
 CLOSED: [2021-10-23 周六 14:48]
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-10-25 周一 09:26
+:END:
 6HBCSW3NKCQEESM5, 感恩戴德一天
 * Project
 * Someday
