[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -35,13 +35,43 @@ DEADLINE: <2021-11-12 周五 23:00 +1m> SCHEDULED: <2021-11-12 周五 09:00 +1m>
   2. 房间里的马桶坏了, 电磁炉可能坏了, 阳台灯坏了
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
-** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2021-10-31 周日 23:00 ++1w> SCHEDULED: <2021-10-30 周六 18:00 ++1w>
+** TODO [#A] 归档并回顾一周的计划                                    :event:
+DEADLINE: <2021-11-22 周一 23:00 ++1w> SCHEDULED: <2021-11-20 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-10-25 周一 09:11]
+:LAST_REPEAT: [2021-11-13 周六 16:24]
 :END:
+- State "DONE"       from "TODO"       [2021-11-13 周六 16:24] \\
+  1. 完成了第三版战斗解析器
+     - 下一个行为回同之前所有的未完成行为进行比较, 根据对应的规则决定执行时间
+     - 行为末尾的状态表现协议会被合并到行为结束的回调之中
+  2. 设计行为嵌套解析树的逻辑
+     - 目前行为协议会带有一个字段来表明自己是行为前还是行为后
+     - 服务端以中序发送, 客户端最后输出一个先序的行为列表
+     - 整体结构非常类似于UI树, 前子行为列表-自身行为-后子行为列表
+  ------------------------------------------------
+  ------------------------------------------------
+- State "DONE"       from "TODO"       [2021-11-08 周一 09:09] \\
+  1. 特殊处理网络协议中iOrder为0的情况, 这种情况代表施法者是状态本身
+  2. 初步实现了新版的协议解析器, 主要有以下变化:
+     - 每个命令的操作封装到类本身
+     - 取消同步命令和异步命令, 默认所有命令都是按序执行
+     - 表现命令会同前一个命令根据一套特殊规则计算播放间隔
+     - 喊招命令会根据ui数据决定相对第一个行为的提前播放时间
+  ------------------------------------------------
+  1. 周末吃多了, 吃了一个披萨加一份意面, 太贵了, 立贴为证, 这是最后一次
+  ------------------------------------------------
+- State "DONE"       from "TODO"       [2021-11-01 周一 10:46] \\
+  1. 支持测试战斗进度条拖动, 目前的方案是使用一个额外的组件来和解析器共用解析列表,
+     每当拖动时, 快速执行从战斗开始到当前点的指令. 到当前时间点在按照正常表现播放.
+  2. 处理布阵界面的显示和配置不同步的bug
+  3. 编写年度总结, 完成年度面谈
+  4. 编写战斗模块协议到表现的文档
+  ------------------------------------------------
+  1. 居然和半斤打魔兽打了个1:1, 我是没想到的
+  ------------------------------------------------
+  1. 邪恶铭刻, 完美的解密卡牌游戏, 毋庸置疑的2021年度独立游戏冠军
 - State "DONE"       from "TODO"       [2021-10-25 周一 09:11] \\
   1. 实现了一个新的战斗进度组件用来控制战斗命令的执行进度, 不过由于尚未支持从开始到
      拖动位置的快速执行功能, 导致如果战斗中存在战斗状态的添加和删除, 拖动会导致异常
@@ -447,12 +477,26 @@ DEADLINE: <2021-10-31 周日 23:00 ++1w> SCHEDULED: <2021-10-30 周六 18:00 ++1
   1. 自行车从家里邮过来之后组好, 送到车店保养.
   ------------------------------------------------
 ** TODO [#A] 每月归档到年度文件                                     :event:
-DEADLINE: <2021-10-30 周六 23:00 ++1m> SCHEDULED: <2021-10-30 周六 09:00 ++1m>
+DEADLINE: <2021-11-30 周二 23:00 ++1m> SCHEDULED: <2021-11-30 周二 09:00 ++1m>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-09-30 周四 17:40]
+:LAST_REPEAT: [2021-11-01 周一 11:30]
 :END:
+- State "DONE"       from "TODO"       [2021-11-01 周一 11:30] \\
+  工作上:
+  1. 完成了《我所理解的cocos2dx》的学习
+  2. 删除了旧战斗模块的代码
+  3. 战斗及战斗指令, 战斗表现优化
+  4. 为测试战斗添加了战斗记录导入导出功能
+  5. 实现输出可读的服务器战斗协议记录的功能
+  6. 实现了测试战斗的战斗进度控制组件
+  7. 完成了年度总结和年度面谈
+  生活上:
+  1. 车胎的外胎和碟刹全换换
+  2. 领取公司枪火激活码两个, 美滋滋
+  3. 第三次西域胡杨, 吐了吐了
+  4. 玩到了目前玩过的最好玩的卡牌解密游戏, 邪恶铭刻, 强烈推荐
 - State "DONE"       from "TODO"       [2021-09-30 周四 17:40] \\
   工作上:
   1. 优化游戏启动流程
@@ -516,14 +560,8 @@ DEADLINE: <2021-10-30 周六 23:00 ++1m> SCHEDULED: <2021-10-30 周六 09:00 ++1
   2. 完成了多益的入职培训
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
-** Archive                                                         :ARCHIVE:
-*** DONE [#A] 补胎                                                  :event:
-CLOSED: [2021-10-18 周一 09:04] SCHEDULED: <2021-10-14 周四 09:32>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-10-25 周一 09:26
-:END:
 * Appointment
-** TODO 购买xbox精英二代手柄                                     :shopping:
+** WAIT 购买xbox精英二代手柄                                     :shopping:
 <2021-11-01 周一 09:00>
 注意手柄的A键不灵敏, 回弹慢, 连续点击后断触问题
 ** WAIT 手机号码切换                                                :event:
@@ -545,24 +583,5 @@ SCHEDULED: <2021-06-12 周六 09:00>
 ** WAIT 爬火炉山                                                     :event:
 - State "WAIT"       from "TODO"       [2021-04-11 周日 16:29] \\
   和同事商量一下一起去, 先不急.
-** Archive                                                         :ARCHIVE:
-*** DONE 西域胡杨部门聚餐                                            :date:
-CLOSED: [2021-10-16 周六 10:32]
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-10-16 周六 17:18
-:END:
-<2021-10-14 周四 17:00>
-*** DONE 领取社保卡                                                 :event:
-CLOSED: [2021-10-16 周六 10:33]
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-10-16 周六 17:18
-:END:
-<2021-10-16 周六 10:33>
-*** DONE 枪火激活码两个                                             :event:
-CLOSED: [2021-10-23 周六 14:48]
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-10-25 周一 09:26
-:END:
-6HBCSW3NKCQEESM5[已经送给方周], 感恩戴德一天
 * Project
 * Someday
