[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -12,11 +12,13 @@
 
 * Inbox
 * Next Action
-** TODO [#A] 大壮名城G1-1018租房月志                                 :event:
-DEADLINE: <2021-11-12 周五 23:00 +1m> SCHEDULED: <2021-11-12 周五 09:00 +1m>
+** TODO [#A] 大壮名城G1-1018租房月志                                :event:
+DEADLINE: <2021-12-12 周日 23:00 +1m> SCHEDULED: <2021-12-12 周日 09:00 +1m>
 :PROPERTIES:
 :LOGGING: DONE(@)
 :END:
+- State "DONE"       from "TODO"       [2021-11-12 周五 16:57] \\
+  1. 房租2000, 电费200(空调+电脑), 物业+水117, 网费100
 - State "DONE"       from "TODO"       [2021-10-12 周二 09:44] \\
   1. 房租2000, 电费200(空调+电脑), 物业+水117, 网费100
   2. 额外疏通水池下水管道50
@@ -35,13 +37,25 @@ DEADLINE: <2021-11-12 周五 23:00 +1m> SCHEDULED: <2021-11-12 周五 09:00 +1m>
   2. 房间里的马桶坏了, 电磁炉可能坏了, 阳台灯坏了
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
-** TODO [#A] 归档并回顾一周的计划                                    :event:
-DEADLINE: <2021-11-22 周一 23:00 ++1w> SCHEDULED: <2021-11-20 周六 18:00 ++1w>
+** TODO [#A] 归档并回顾一周的计划                                   :event:
+DEADLINE: <2021-11-29 周一 23:00 ++1w> SCHEDULED: <2021-11-27 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-11-13 周六 16:24]
+:LAST_REPEAT: [2021-11-20 周六 17:00]
 :END:
+- State "DONE"       from "TODO"       [2021-11-20 周六 17:00] \\
+  1. 完成了行为协议嵌套解析功能
+     将中序发送的行为协议转为前序并在客户端执行
+  2. 完成了怒气表现客户端的接入
+     - 删除旧版怒气协议, 更新新版生命状态协议, 追加技能计数协议
+     - 命令解析器和组件支持怒气表现
+  3. 优化行为之间判断处理代码, 优化跳过战斗报错问题
+  ------------------------------------------------
+  1. <小狗钱钱>读完之后受益匪浅, 下周三必须写一个总结
+  ------------------------------------------------
+  1. 必须要做一个理财计划了, 不然财产贬值太快了, 必须想一个能在睡觉的时候都能赚钱的办法
+  2. 想要学口琴, 必须尽快开始
 - State "DONE"       from "TODO"       [2021-11-13 周六 16:24] \\
   1. 完成了第三版战斗解析器
      - 下一个行为回同之前所有的未完成行为进行比较, 根据对应的规则决定执行时间
