[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -37,16 +37,25 @@ DEADLINE: <2021-12-12 周日 23:00 +1m> SCHEDULED: <2021-12-12 周日 09:00 +1m>
   2. 房间里的马桶坏了, 电磁炉可能坏了, 阳台灯坏了
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
-** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2021-11-29 周一 23:00 ++1w> SCHEDULED: <2021-11-27 周六 18:00 ++1w>
+** TODO [#A] 归档并回顾一周的计划                                    :event:
+DEADLINE: <2021-12-06 周一 23:00 ++1w> SCHEDULED: <2021-12-04 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-11-20 周六 17:00]
+:LAST_REPEAT: [2021-11-27 周六 16:47]
 :END:
+- State "DONE"       from "TODO"       [2021-11-27 周六 16:47] \\
+  1. 新增一个拖拽容器, 使用拖动来各个角度浏览容器内元素
+  2. 英雄山章节地图支持拖拽浏览
+  3. 英雄山章节地图支持拖拽进度保存
+  4. 战斗解析支持被动技能喊招
+  5. 修复战斗解析器重新登陆导致版本错误的bug
+  ------------------------------------------------
+  1. 投资基金是一件长期的事, 持有的越长, 风险越低
+  ------------------------------------------------
 - State "DONE"       from "TODO"       [2021-11-20 周六 17:00] \\
-  1. 完成了行为协议嵌套解析功能
-     将中序发送的行为协议转为前序并在客户端执行
+ 1. 完成了行为协议嵌套解析功能
+    将中序发送的行为协议转为前序并在客户端执行
   2. 完成了怒气表现客户端的接入
      - 删除旧版怒气协议, 更新新版生命状态协议, 追加技能计数协议
      - 命令解析器和组件支持怒气表现
@@ -574,6 +583,8 @@ DEADLINE: <2021-11-30 周二 23:00 ++1m> SCHEDULED: <2021-11-30 周二 09:00 ++1
   2. 完成了多益的入职培训
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
+** TODO [#A] 设计理财计划                                           :event:
+DEADLINE: <2021-12-06 周一> SCHEDULED: <2021-11-22 周一 09:37>
 * Appointment
 ** WAIT 购买xbox精英二代手柄                                     :shopping:
 <2021-11-01 周一 09:00>
